<resources>
    <string name="app_name">Udacity App Load Animations</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="loadingImageViewContentDesc">LoadingImageVie</string>
    <string name="radio_option1_text">Glide - Image Loading Library by Bump Tech</string>
    <string name="radio_option2_text">LoadApp - Current repository by Udacity</string>
    <string name="radio_option3_text">Retrofit - Type-Safe HTTP client for Android and Java by Square, Inc</string>
    <string name="status">Status</string>
    <string name="downloaded_file_name">File Name</string>
    <string name="okay">OKAY</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="button_loading_status">Loading</string>
    <string name="button_completed_status">Download</string>
    <string name="button_default_status">Download</string>

</resources>
